media/css/firefox/home/master.scss
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at http://mozilla.org/MPL/2.0/.

$font-path: '/media/fonts';
$image-path: '/media/protocol/img';

@import '../../../protocol/css/includes/lib';
@import '../../../protocol/css/components/feature-card';
@import '../../../protocol/css/components/menu-list';


.js-fx-only {
    display: none;

    .is-firefox & {
        display: block;
    }
}

// ------------------------------------------------------------------------------
// component over rides (content menu list, feature card)

.firefox-home {

    // content
    .mzp-l-content {
        max-width: $content-xl;
        padding-bottom: $layout-md;
        padding-top: $layout-md;
    }

    // menu list
    .mzp-c-menu-list {
        margin-bottom: $spacing-lg;
    }

    // feature cards
    .mzp-c-card-feature {
        margin-bottom: 0;
        max-width: $content-sm;

        h4 {
            @include text-display-sm;
            margin-bottom: $layout-sm;
        }
    }

    .mzp-c-card-feature-content {
        margin-top: 0;
    }

    .mzp-c-card-feature-media-wrapper {
        margin-top: $layout-md;
    }

    .mzp-c-card-feature-media img {
        max-width: $content-xs;
    }

    @media #{$mq-md} {

        // content
        .mzp-l-content {
            padding-top: $layout-lg;
            padding-bottom: $layout-lg;
        }

        // feature cards
        .mzp-c-card-feature {
            max-width: 100%;
        }

        .mzp-c-card-feature-media img {
            max-width: 100%;
            width: auto;
        }
    }
}

.t-browsers,
.t-monitor,
.t-lockwise,
.t-send,
.t-pocket {
    .mzp-c-card-feature-title {
        @include bidi(((background-position, top left, top right),));
        @include image-replaced;
        background-repeat: no-repeat;
        margin-bottom: $spacing-lg;
        min-height: 40px;
        text-indent: -120%; // image-replacement Safari bug see issue #8084
    }
}

.mzp-c-card-feature-title {
    .t-browsers & {
        @include at2x('/media/protocol/img/logos/firefox/browser/logo-word-hor-sm.png', auto, 40px);
    }

    .t-monitor & {
        @include at2x('/media/protocol/img/logos/firefox/monitor/logo-word-hor-sm.png', auto, 40px);
    }

    .t-lockwise & {
        @include at2x('/media/protocol/img/logos/firefox/lockwise/logo-word-hor-sm.png', auto, 40px);
    }

    .t-send & {
        @include at2x('/media/protocol/img/logos/firefox/send/logo-word-hor-sm.png', auto, 40px);
    }

    .t-pocket & {
        background-image: url('/media/img/logos/pocket/pocket-wordmark.svg');
    }
}

// ------------------------------------------------------------------------------
// Lead text and image

.c-lead {
    .mzp-l-content {
        max-width: $content-max;
    }
}

.c-lead-title {
    @include font-size(40px);
    margin-bottom: 0;
    text-align: center;
}

@media #{$mq-md} {
    .c-lead {
        background-image: url('/media/img/firefox/home/master/hero.jpg');
        background-size: auto 300px;
        background-repeat: no-repeat;
        background-position: center left 50vw;
    }

    .c-lead-title {
        @include bidi (((text-align, left, right),));
        @include flexbox;
        @include align-items(center);
        @include font-size(48px);
        max-width: calc(50% - #{$layout-sm});
        min-height: 300px - $layout-xl;
    }
}

@media #{$mq-lg} {
    .c-lead {
        @include at2x('/media/img/firefox/home/master/hero.jpg', contain);
        margin-top: $spacing-lg;
        margin-bottom: $layout-md;
    }

    .c-lead-title {
        @include font-size(64px);
        margin-top: $spacing-lg;
        max-width: calc(50% - #{$layout-md});
    }
}


// ------------------------------------------------------------------------------
// showcase

.c-showcase {
    text-align: center;
}

.c-showcase-title {
    @include text-display-sm;
    margin-bottom: $spacing-lg;
}

.c-showcase-list {
    @include flexbox;
    flex-wrap: wrap;
    justify-content: center;
    margin: 0 auto ($layout-md * -1) auto; // offset the bottom magin on the individual icons
    max-width: $content-md;

    .t-small & {
        max-width: $content-sm;
    }

    li {
        flex-grow: 1;
        flex-basis: 0;
        margin: 0 $layout-sm $layout-sm;

        .t-small & {
            display: inline-block;
            flex-basis: auto;
            height: 40px;
            width: 40px;
            overflow: hidden;
        }
    }
}

@media #{$mq-md} {
    .c-showcase-list {
        margin-bottom: ($layout-lg * -1); // offset the magin on the individual icons

        li {
            margin: 0 $layout-sm $layout-lg;

            .t-small & {
                margin: 0 $spacing-md $layout-lg;
            }
        }
    }
}


// ------------------------------------------------------------------------------
// promise background colour and image

.t-promise {
    padding: 0 $layout-sm;

    .mzp-l-content {
        background-image: linear-gradient(90deg,  $color-violet-80, $color-violet-90);
        border-radius: 8px;
        box-shadow: 0 4px 16px 0 transparentize($color-off-black, .24);
        color: #fff;
        margin: $layout-md auto;
        max-width: $content-sm;
        min-width: 0;
    }

    .mzp-c-card-feature {
        margin-bottom: 0;

        .mzp-c-card-feature-desc {
            color: #fff;
        }
    }

    .mzp-c-card-feature-title {
        strong {
            @include zap('/media/protocol/img/zaps/zap-08.svg');
        }
    }

    .mzp-c-card-feature-media-wrapper {
        display: none;
    }

    @media #{$mq-md} {
        margin: $layout-lg 0;
        padding: 0 $layout-md;

        .mzp-l-content {
            background-image: url('/media/img/firefox/home/master/respect.jpg'), linear-gradient(90deg, #5731AB 50%, $color-violet-90);
            background-position: left -30px center, top left;
            background-repeat: no-repeat;
            background-size: 50%, auto;
            max-width: $content-xl;

            @media #{$mq-high-res} {
                background-image: url('/media/img/firefox/home/master/respect-high-res.jpg'), linear-gradient(90deg, #5731AB 50%, $color-violet-90);
            }
        }

        .mzp-c-card-feature-content {
            @include flexbox;
            justify-content: center;
            min-height: 280px;
        }
    }

    @media #{$mq-xl} {
        padding: 0 $layout-lg;

        .mzp-l-content {
            background-position: left center, top left;
            background-size: 547px auto, auto;
        }
    }
}

// ------------------------------------------------------------------------------
// bottom of the page cta

.c-end {
    background: linear-gradient(90deg, $color-violet-90, $color-off-black);
    color: #fff;
    text-align: center;

    .mzp-l-content {
        max-width: $content-lg;
        padding-bottom: $layout-xl;
        padding-top: $layout-xl;
    }
}

.c-end-title {
    @include text-display-md;
    color: #fff;
    margin-bottom: $spacing-2xl;
    margin-top: $layout-md;

    strong {
        @include zap('/media/protocol/img/zaps/zap-08.svg');
    }
}

@media #{$mq-md} {
    .c-end {
        margin-top: $layout-lg;
    }
}

